bear/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-test-svc
  labels:
    name: deploy-test
spec:
  selector:
    app: deploy-test
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 9527
