bear/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: deploy-test-route
  labels:
    name: deploy-test
    app: deploy-test
spec:
  path: /
  to:
    kind: Service
    name: deploy-test-svc
    weight: 100
  port:
    targetPort: 9527
  wildcardPolicy: None
